--- a/app1/Makefile
+++ b/app1/Makefile
@@ -1,7 +1,7 @@
 CC=clang
 CFLAGS=-g -Wall -Wextra -Werror
 
-EXEC=client-introduction client-tutoriel client-interactif
+EXEC=client-introduction client-tutoriel client-interactif client-TUTORIEL
 
 all: $(EXEC)
 
@@ -10,6 +10,8 @@ client-interactif: client-interactif.o client.o
 client-tutoriel: client-tutoriel.o client.o
 
 client-introduction: client-introduction.o client.o
+
+client-TUTORIEL: client-TUTORIEL.o client.o
 
 client.o: client.c client.h
 
