client-projetX and client-crypteMove

--- a/app1/Makefile
+++ b/app1/Makefile
@@ -1,7 +1,7 @@
 CC=clang
 CFLAGS=-g -Wall -Wextra -Werror
 
-EXEC=client-introduction client-tutoriel client-interactif client-TUTORIEL client-projetX
+EXEC=client-introduction client-tutoriel client-interactif client-TUTORIEL client-projetX client-crypteMove
 
 all: $(EXEC)
 
@@ -14,6 +14,8 @@ client-introduction: client-introduction.o client.o
 client-TUTORIEL: client-TUTORIEL.o client.o ressources.o
 
 client-projetX: client-projetX.o client.o ressources.o
+
+client-crypteMove: client-crypteMove.o client.o ressources.o
 
 client.o: client.c client.h
 
