--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ app1/client-TUTORIEL
 app1/client-TUTORIEL.o
 app1/ressources
 app1/ressources.o
-
+app1/client-crypteMove
+app1/client-crypteMove.o
