--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ app1/client-crypteMove
 app1/client-crypteMove.o
 app1/client-bayOfPigs
 app1/client-bayOfPigs.o
+app1/client-crypteSeq
+app1/client-crypteSeq.o
