client-northwoods finished

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ app1/client-bayOfPigs
 app1/client-bayOfPigs.o
 app1/client-crypteSeq
 app1/client-crypteSeq.o
+app1/client-northwoods
+app1/client-northwoods.o
