--- a/app1/Makefile
+++ b/app1/Makefile
@@ -1,7 +1,7 @@
 CC=clang -g
 CFLAGS=-g -Wall -Wextra -Werror
 
-EXEC=client-introduction client-tutoriel client-interactif client-TUTORIEL client-projetX client-crypteMove client-bayOfPigs client-crypteSeq
+EXEC=client-introduction client-tutoriel client-interactif client-TUTORIEL client-projetX client-crypteMove client-bayOfPigs client-crypteSeq client-northwoods
 
 all: $(EXEC)
 
@@ -20,6 +20,8 @@ client-crypteMove: client-crypteMove.o client.o ressources.o
 client-bayOfPigs: client-bayOfPigs.o client.o ressources.o
 
 client-crypteSeq: client-crypteSeq.o client.o ressources.o
+
+client-northwoods: client-northwoods.o client.o ressources.o
 
 client.o: client.c client.h
 
