--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ app1/client-northwoods
 app1/client-northwoods.o
 app1/client-lostCause
 app1/client-lostCause.c
+app1/client-planB
+app1/client-planB.o
